--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-slider": "^2.0.6",
     "react-top-loading-bar": "^2.3.1",
     "sharp": "^0.32.6",
     "zustand": "^4.4.5"
